Make Souffle use more verbose